SettingsActivity/feat: Set input type of 'server_port' preference

--- a/examples/SettingsActivity/app/src/main/res/values/strings.xml
+++ b/examples/SettingsActivity/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!-- Network Preferences -->
     <string name="server_address_title">Server Address</string>
     <string name="server_port_title">Server Port</string>
+    <string name="server_port_dialog_title">Enter server port number</string>
     <string name="enable_tls_title">Enable TLS</string>
     <string name="enable_tls_summery_on">Encrypt network data</string>
     <string name="enable_tls_summery_off">Do not encrypt network data</string>
